--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
                 </div>
                 <div class="about-text">
                     <p>
-                        I'm a dedicated System Administrator with extensive experience in managing critical health surveillance systems. My work focuses on ensuring high availability and reliability for health systems that serve health workers across multiple locations.
+                        I'm a dedicated System Administrator with extensive experience in managing critical health systems. My work focuses on ensuring high availability and reliability for health systems that serve health workers across multiple locations.
                     </p>
                     <p>
                         With a strong background in database management and web technologies. I specialize in troubleshooting complex system integrations, optimizing performance, and maintaining seamless user experiences for mission-critical applications.
@@ -619,7 +619,7 @@
                     <div class="stat-label">Years Experience</div>
                 </div>
                 <div class="stat">
-                    <div class="stat-number">10+</div>
+                    <div class="stat-number">7+</div>
                     <div class="stat-label">Projects Completed</div>
                 </div>
                 <div class="stat">
@@ -713,7 +713,7 @@
                 <div class="service-card">
                     <div class="service-icon">🚨</div>
                     <h3>Technical Support</h3>
-                    <p>Expert troubleshooting and support for critical system issues, minimizing downtime and ensuring business continuity.</p>
+                    <p>Troubleshooting and support for critical system issues, minimizing downtime and ensuring business continuity.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">🎨</div>
